<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SingleJourneyActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:onClick="onClickMap"
            android:padding="8dp"
            android:text="@string/view_map" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="onClickEdit"
            android:padding="8dp"
            android:text="@string/edit_journey"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ViewSingleJourney_titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/ViewSingleJourney_journeyImg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/running" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_speed"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/Statistics_distanceToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:text="0.00 KM/H"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="Rating:"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/ViewSingleJourney_ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:text="3"
            android:textSize="20sp" />



        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/date"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/ViewSingleJourney_dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20/01/2020"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/ViewSingleJourney_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="#000"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/Statistics_timeToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/Statistics_recordDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00 KM"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ViewSingleJourney_commentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_comment"
            android:textSize="18sp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>